# niriscript

./: Cargo.toml
src/: ipc.rs  lib.rs
